--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add_icon"/>
+        app:srcCompat="@drawable/ic_add_icon"
+        app:backgroundTint="@android:color/holo_blue_light"/>
 
 </android.support.design.widget.CoordinatorLayout>
