--- a/app/src/main/res/layout/activity_shift_admin.xml
+++ b/app/src/main/res/layout/activity_shift_admin.xml
@@ -52,8 +52,8 @@
         />
 
     <Button
-        android:id="@+id/button"
-        android:text="Button"
+        android:id="@+id/save_button"
+        android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
