--- a/app/src/main/res/layout/activity_shift_admin.xml
+++ b/app/src/main/res/layout/activity_shift_admin.xml
@@ -11,48 +11,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.carleton.COMP2601.ShiftAdminActivity">
 
-    <AutoCompleteTextView
-        android:id="@+id/emp1"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:inputType="text"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginRight="@dimen/text_margin"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:imeOptions="actionDone"/>
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center"/>
 
     <AutoCompleteTextView
         android:id="@+id/emp2"
         android:inputType="text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:layout_below="@+id/emp1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:imeOptions="actionDone"/>
 
     <AutoCompleteTextView
         android:id="@+id/emp3"
         android:inputType="text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/emp2"
         android:layout_marginTop="65dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:imeOptions="actionDone"/>
 
     <AutoCompleteTextView
         android:id="@+id/emp4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_marginTop="54dp"
         android:layout_below="@+id/emp3"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:imeOptions="actionDone"/>
 
     <Button
@@ -63,5 +58,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
+
+    <AutoCompleteTextView
+        android:id="@+id/emp1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        android:layout_below="@+id/content"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="19dp"/>
 
 </RelativeLayout>
